# PDX-Bid-Tabs

./: .gitignore  README.md  pyproject.toml
config/: contractor_name_map.csv  estimate_item_catalog.csv  estimate_item_mapping_rules.csv  location_dictionary.csv  pay_item_parse_overrides.csv  spec_mapping.csv  spec_section_catalog.csv
data_in/: DRAFT One Port Estimating - Quantities Tool.xlsx  HIO Runway 13R-31L Bid Tab.xlsx  HIO Runway and Taxway Seals Bid Tab.xlsx  PDX Lift Station Bid Tab.xlsx  PDX ORANG Reversion Areas Bid Tab.xlsx  PDX Taxways A, K, T Bid Tab.xlsx  PDX-RON Bid Tab.xlsx  PDX-RON Ph2 Bid Tab.xlsx  PDX_15D147BidTab.xlsx  PDX_2015D006.xlsx  PDX_2015D142 BidTab.xlsx  PDX_2016D015 Basin 7.xlsx  PDX_2016D018 Airport Way.xlsx  PDX_2017D013.xlsx  PDX_2017D029.xlsx  PDX_2018D015.xlsx  PDX_2020D008.xlsx  PDX_2020D009.xlsx  PDX_2020D022.xlsx  PDX_2021D007 Bid Tab.xlsx  PDX_2023D003.xlsx  PDX_2023D011.xlsx  PDX_2023D016.xlsx  PDX_2023D028.xlsx  PDX_2024D016 - Bid Set Bid Tab.xlsx  PDX_2024D045.xlsx  T5 Berth 503 Rehab Bid Tab.xlsx  TTD Runway 25 Bid Tab.xlsx  Taxiway T Bid Tab.xlsx
data_out/: Bids.csv  Items.csv  Projects.csv  compiled_excel_itemized_clean.xlsx  compiled_excel_itemized_clean_verify.csv  compiled_excel_itemized_raw_snapshot.csv  dim_bid_schedule.csv  dim_contractor.csv  dim_pay_item.csv  dim_project.csv  dim_unit.csv  fact_bid_item_price.csv  fact_bid_schedule_total.csv
docs/: dashboard_field_mapping.md  dashboard_field_mapping.xlsx  data_dictionary_analysis_schema.md  data_dictionary_compiled_excel_itemized_clean_v2.md  data_model.md  (+1 more)
(+98 files in other folders)
