[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bidtabs"
version = "0.1.0"
description = "Notebook-portable bid tabs pipeline"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "openpyxl>=3.1",
]

[project.scripts]
bidtabs = "bidtabs.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
